<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_medium"
    android:paddingVertical="@dimen/padding_small">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/weather_date" />

    <TextView
        android:id="@+id/tvAverageTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/weather_average_temp" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/weather_pressure" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/weather_humidity" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_desc" />

</LinearLayout>
