<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.home.MainActivity">

    <EditText
        android:id="@+id/edtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:hint="@string/enter_city_name"
        android:lines="1"
        android:inputType="textCapSentences"
        android:imeOptions="actionSearch"
        android:imeActionLabel="@android:string/search_go"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="postalAddress" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClear"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintTop_toTopOf="@+id/edtCity"
        app:layout_constraintBottom_toBottomOf="@+id/edtCity"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:contentDescription="@string/btn_clear"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetWeather"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_medium"
        android:text="@string/btn_get_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDailyForecast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGetWeather"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/daily_forecast_item"
        tools:itemCount="5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emptyView"
        app:layout_constraintTop_toTopOf="@+id/rvDailyForecast"
        app:layout_constraintStart_toStartOf="@+id/rvDailyForecast"
        app:layout_constraintEnd_toEndOf="@+id/rvDailyForecast"
        android:minHeight="100dp"
        android:text="@string/no_result"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_medium"
        android:textAppearance="?textAppearanceBody1"
        android:visibility="invisible"
        tools:visibility="visible"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/errorView"
        app:layout_constraintTop_toTopOf="@+id/rvDailyForecast"
        app:layout_constraintStart_toStartOf="@+id/rvDailyForecast"
        app:layout_constraintEnd_toEndOf="@+id/rvDailyForecast"
        android:minHeight="100dp"
        tools:text="No network"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_medium"
        android:textAppearance="?textAppearanceBody1"
        android:visibility="invisible"
        tools:visibility="visible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
